UI alignment guick fix

--- a/grind/src/main/webapp/resources/styles/tyyli.css
+++ b/grind/src/main/webapp/resources/styles/tyyli.css
@@ -8,7 +8,6 @@ body {
 .container {
 	position: relative;
 	padding: 20px;
-	width: auto;
 }
 
 .dd-select {
